--- a/igem wiki 2018/wiki2018/Team/index.html
+++ b/igem wiki 2018/wiki2018/Team/index.html
@@ -160,9 +160,44 @@ installed 06/28*/
     <div class="container">
 
       <!-- Page Heading -->
+
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="../images/800x400num1.svg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+          <h5>We can write message</h5>
+          <p>Hello! My name is DENGU. Nice to meet you.</p>
+        </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="../images/800x400num2.svg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="../images/800x400num3.svg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <br>
+
       <h1 class="my-4">Members
         <small>Tokyo Tech</small>
       </h1>
+
 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
