--- a/igem wiki 2018/wiki2018/nav.html
+++ b/igem wiki 2018/wiki2018/nav.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="Template/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="loading.css" rel="stylesheet">
 
 <body>
 
@@ -92,6 +93,8 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+
+
           <!--<li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>-->
@@ -102,6 +105,8 @@
         </form>
       </div>
     </nav>
+
+
 
     <script src="Template/jquery/jquery.min.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
