--- a/mobirise/index_wikitest.html
+++ b/mobirise/index_wikitest.html
@@ -370,7 +370,7 @@ not necessary
   <!--<script src="assets/dropdown/js/script.min.js"></script>-->
   <script type="text/javascript" src="http://2018.igem.org/Team:Tokyo_Tech/mobirise/dropdown/js/script-min-js?action=raw&amp;ctype=text/javascript"></script>
   <!--<script src="assets/theme/js/script.js"></script>-->
-  <script type="text/javascript" src="Fhttp://2018.igem.org/Team:Tokyo_Tech/mobirise/theme/js/script-js?action=raw&amp;ctype=text/javascript"></script>
+  <script type="text/javascript" src="http://2018.igem.org/Team:Tokyo_Tech/mobirise/theme/js/script-js?action=raw&amp;ctype=text/javascript"></script>
 
 
 </body>
