create jQuery js

--- a/mobirise/index_wikitest.html
+++ b/mobirise/index_wikitest.html
@@ -345,14 +345,8 @@
     </div>
 </section>
 
-<!--
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
-not necessary
-  memo
-<script type="text/javascript" src="urlhere?action=raw&amp;ctype=text/javascript"></script>
--->
 
-
+  <script type="text/javascript" src="http://2018.igem.org/Team:Tokyo_Tech/mobirise/web/jquery-min-js?action=raw&amp;ctype=text/javascript"></script>
   <!--<script src="assets/popper/popper.min.js"></script>-->
   <script type="text/javascript" src="http://2018.igem.org/Team:Tokyo_Tech/mobirise/popper/popper-min-js?action=raw&ctype=text/javascript"></script>
   <!--<script src="assets/tether/tether.min.js"></script>-->
