--- a/mobirise-now(design)/Human-Practice.html
+++ b/mobirise-now(design)/Human-Practice.html
@@ -51,20 +51,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page3.html">Overview<br></a><a class="text-white dropdown-item display-4" href="page11.html">Basic Parts</a></div>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Overview<br></a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">Basic Parts</a></div>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
-                        Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="page13.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="page12.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="page4.html" aria-expanded="true">InterLab</a></div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
+                        Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
-                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                         Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br><br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">Sponsor</a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">nanda</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header10 cid-r5eyo6ztXn mbr-fullscreen mbr-parallax-background" id="header10-w">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header10 cid-r5eyo6ztXn mbr-fullscreen mbr-parallax-background" id="header10-w">
 
     
 
@@ -348,7 +348,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="yAVYG8++SOTLq1X7/9m+fuCEst3GAl0jnMY+D84UT+eSisykUqMCBiM+PhpS1WzbfDd0XmwNTVJ0H+WQcn4QNq6mnRxWwBL+JVzUkhG+wxcKl/hVCkUkX0oadHcfj9NW" data-form-email="true">
+                        <input type="hidden" value="gTQnR3uBhqrDp5oaXMVft2bvZg/XS07coXVp2URcGLPfqoZb0Bznl9M5vVGRP/t2Ko0h7sGHgjeusw+9lqBcW9jyyKv51zhJ1aXVih0VLsq7ZeHr3M5jmvPUG/5di6wF" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-v">
                         </div>
