--- a/mobirise-now(design)/InterLab.html
+++ b/mobirise-now(design)/InterLab.html
@@ -52,20 +52,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page3.html">Overview<br></a><a class="text-white dropdown-item display-4" href="page11.html">Basic Parts</a></div>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Overview<br></a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">Basic Parts</a></div>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
-                        Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="page13.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="page12.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="page4.html" aria-expanded="true">InterLab</a></div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
+                        Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
-                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                         Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br><br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">Sponsor</a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">nanda</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header10 cid-r5UmXXtySa mbr-fullscreen mbr-parallax-background" id="header10-1f">
+<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="header10 cid-r5UmXXtySa mbr-fullscreen mbr-parallax-background" id="header10-1f">
 
     
 
