mobirise design change

--- a/mobirise-now(design)/HP-meeting.html
+++ b/mobirise-now(design)/HP-meeting.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content4 cid-r5eJr5RuCU" id="content4-1d">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-r5eJr5RuCU" id="content4-1d">
 
     
 
