--- a/mobirise-now(design)/Basic-Parts.html
+++ b/mobirise-now(design)/Basic-Parts.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section content5 cid-r5GSF2XvHd mbr-parallax-background" id="content5-l">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section content5 cid-r5GSF2XvHd mbr-parallax-background" id="content5-l">
 
     
 
