--- a/mobirise-now(design)/InterLab.html
+++ b/mobirise-now(design)/InterLab.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header10 cid-r5UmXXtySa mbr-fullscreen mbr-parallax-background" id="header10-1f">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header10 cid-r5UmXXtySa mbr-fullscreen mbr-parallax-background" id="header10-1f">
 
     
 
@@ -197,13 +197,13 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_82" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> What is Mobirise?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_82" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise is an offline app for Window and Mac to easily create small/medium websites, landing pages, online resumes and portfolios, promo sites for apps, events, services and products.</p>
@@ -212,13 +212,13 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_82" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Is it good for me?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_82" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise is perfect for non-techies who are not familiar with the intricacies of web development and for designers who prefer to work as visually as possible, without fighting with code. Also great for pro-coders for fast prototyping and small customers' projects.</p>
@@ -227,13 +227,13 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_82" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_4" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Why Mobirise?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_82" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Key differences from traditional builders:<br>* Minimalistic, extremely <strong>easy-to-use</strong> interface<br>* <strong>Mobile</strong>-friendliness, latest website blocks and techniques "out-the-box"<br>* <strong>Free</strong> for commercial and non-profit use</p>
