変更が大きいので新しいブランチでとり合えず

--- a/backup/wiki-test-mobirise/temp.html
+++ b/backup/wiki-test-mobirise/temp.html
@@ -1,4 +1,5 @@
 {{Tokyo_Tech/mobirise/nav-bar}}
+<!--この{{Tokyo_Tech/mobirise/nav-bar}}をコピペして間に挿入-->
 <html>
 
   <head>
@@ -9,17 +10,31 @@
     <meta name="author" content="">
 
     <title>Tokyo Tech Team</title>
-
+<!--CSS削除-->
   </head>
 
 <body>
+
+  <!--bodyのすぐ下のsection一つぶんはナビゲーションバーなので削除して下さい-->
     <div class="container">
+
+  <!--ここに文章を入れる
+
+        wiki uproad マニュアル
+  1.  ナビゲーションバー CSS　JS フッター　は削除
+  2.  三つの{{ Template  }を挿入}
+
+-->
 
 
     </div>
 
-</body>
-</html>
+<!--最後のsectionはフッターなことが多いので、フッターであることを確認して削除してください-->
 
+</body>
+
+<!--JS削除-->
+</html>
+<!--この二つをいれてください-->
 {{Tokyo_Tech/mobirise/footer}}
 {{Tokyo_Tech/mobirise/script}}
